# tola-data

./: .gitignore  LICENSE  README.md  dict_tables.md  mlwh_queries.sql  mlwh_schema.sql  pyproject.toml  requirements.txt  tol_track.conf  tolqc_schema.py
data/: genomescope_folder_location.json  illumina_data_folder.json  illumina_data_folder_location.json  pacbio_data_folder_location.json  pacbio_run_folder_location.json  smudgeplot_folder_location.json  tqc_report_list.json
data/dict_files/: README.md  accession_type_dict.ndjson  centre.ndjson  dataset_status_type.ndjson  library_type.ndjson  qc_dict.ndjson  visibility_dict.ndjson
dict_files/: accession_type_dict.ndjson  accession_type_dict.tsv  centre.tsv  dataset_status_dict.tsv  library_type.tsv  qc_dict.tsv  visibility.tsv
scripts/: alembic_autogenerate.sh  build.bash  build.sh  count_duckdb_rows.py  create_test_database.py  create_tolqc_db.py  create_tolqc_schema_files.py  create_tolqc_tables.py  db_connection.py  fetch_test_data.py  filter_tol_status_file.py  get_tsv_for_lucidchart.py  list_pacbio_dirs.py  load_mlwh_seq_data.py  make_table_map.py  parse_consensusreadset_xml.py  patch_file_irods.py  patch_missing_family_taxon_id.py  patch_missing_species_group.py  patch_missing_species_tolid_prefix.py  patch_missing_specimen_locations.py  patch_name_root.py  populate_dict_tables.py  projects_from_tol_track_conf.py  reorder_folder_contents.py  setup_requests_ssl_certificates.sh  show_elastic_fields.py  sql_alchemy_assembly_demo.py  store_project_allocations.py  tag_new_version.py  tolqc_main_db_get_set.py  tolqc_schema.py
sql/: dataset_by_data_names.sql  mlwh_queries.sql  orders_received.sql  pacbio_qc_pending.sql  pacbio_run_folders.sql  pacbio_run_metrics_filled.sql  study_uuids.sql  subtrack_by_file.sql
src/tola/: click_options.py  compare_pacbio_json.py  create_tolqc_db.py  create_tolqc_schema_files.py  data_processed.py  db_connection.py  diff_mlwh.py  duckdb_pacbio_report.py  fetch_mlwh_seq_data.py  fetch_ont_seq_data.py  fetch_test_data.py  filesystem.py  filter_tol_status_file.py  get_tsv_for_lucidchart.py  goat_client.py  illumina_images.py  load_accessions.py  load_illumina.py  load_mlwh_seq_data.py  marshals.py  ncbi_taxonomy_duckdb.py  nd_json.py  ndjson.py  pacbio_run_report.py  pacbio_run_report_orm.py  patch_all_species.py  populate_dict_tables.py  populate_metagenome_tables.py  pretty.py  projects_from_tol_track_conf.py  queries.py  query_result_formaters.py  s3client.py  show_elastic_fields.py  sql_alchemy_assembly_demo.py  status_sheets_to_duckdb.py  store_folder.py  store_insdc_paths.py  subtrack.py  terminal.py  (+4 more)
src/tola/diff_mlwh/: cli.py  column_definitions.py  database.py  diff_mlwh_cmd.py  diff_store.py
src/tola/tqc/: add.py  async_pager.py  dataset.py  delete.py  edit.py  engine.py  folder.py  genomescope.py  load_illumina_images.py  load_pacbio_images.py  query_parser.py  rename.py  report.py  show.py  smudgeplot.py  species.py  status.py  sts.py  subtrack.py  table.py  tqc_cmd.py  upsert.py  view.py
tests/: conftest.py  test_client.py  test_dataset.py  test_genomescope.py  test_goat_client.py  test_mlwh_fetch.py  test_ont_seq_data.py  test_query_parser.py  test_rename.py  test_store_folder.py  test_subtrack.py
tests/data/: pacbio_data_report_config.json
tests/data/fofn/: datasets.ndjson
tests/data/fofn/hic-arima2/: IRODS.hic-arima2.fofn
tests/data/fofn/pacbio/: IRODS.pacbio.ccs.fofn
tests/data/fofn/pacbio/kmer/k31/: fastk.hist.txt  fastk_genomescope_model.txt  fastk_genomescope_progress.txt  fastk_genomescope_report.json  fastk_genomescope_summary.txt  model.txt  report.json
