[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tola-data"
version = "1.0.21"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy ~= 2.0",
    # boto3 v1.36 produces the error on S3 storage which isn't Amazon AWS:
    # botocore.exceptions.ClientError: An error occurred (MissingContentLength) when calling the PutObject operation: None
    "boto3 ~= 1.35.0",
    "click",
    "duckdb ~= 1.1.0",
    "mysql-connector-python",
    "psycopg2", # PostgreSQL connector
    "pyarrow",
    "python-irodsclient",
    "python-ulid",
    "requests",
    'importlib-metadata; python_version>="3.8"',
]

[project.optional-dependencies]
devel = [
    "flask",
    "pytest",
    "ruff",
]

[project.scripts]
compare-pacbio-json="tola.compare_pacbio_json:cli"
data-processed="tola.data_processed:cli"
diff-mlwh="tola.diff_mlwh.diff_mlwh_cmd:cli"
duckdb-pacbio-report="tola.duckdb_pacbio_report:cli"
fetch-mlwh-seq-data="tola.fetch_mlwh_seq_data:cli"
goat-client="tola.goat_client:cli"
load-illumina="tola.load_illumina:cli"
load-mlwh-seq-data="tola.load_mlwh_seq_data:main"
pacbio-run-report="tola.pacbio_run_report:main"
status-duckdb="tola.status_sheets_to_duckdb:cli"
tqc="tola.tqc.tqc_cmd:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "ISC",
    "LOG",
    "N",
    "PYI",
    "S",
    "SIM",
    "U"
]
ignore = [
    "COM812",
    "C901"
]

[tool.ruff.lint.per-file-ignores]
"{test_*,*_test,conftest}.py" = ["S101"]

